--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Interdisciplinary Livestock Microbiome Research Lab
-email: your.email@university.edu
+email: a.rahman@umanitoba.ca
 description: >-
   A research group focused on livestock microbiomes and host-microbe interactions.
 baseurl: ""
