Update URL in configuration file

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ email: a.rahman@umanitoba.ca
 description: >
   A research group focused on livestock microbiomes and host-microbe interactions.
 baseurl: "" 
-url: "https://zisanurrahman.github.io"
+url: "https://ilmrl.github.io"
 
 theme: minima
 
