Comment out theme setting in _config.yml
Comment out the theme setting in the configuration file.

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: >
 baseurl: "" 
 url: "https://ilmrl.github.io"
 
-theme: minima
+#theme: minima
 
 markdown: kramdown
 permalink: pretty
